--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "antd": "^4.19.5",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "dotenv-webpack": "^7.1.0",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.50.0",
+    "scss": "^0.2.4",
+    "swiper": "^8.1.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
