--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -14,16 +15,21 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "dotenv-webpack": "^7.1.0",
+    "i": "^0.3.7",
+    "lottie-react": "^2.2.1",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
+    "npm": "^8.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.0",
     "scss": "^0.2.4",
     "swiper": "^8.1.1",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -49,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
